--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "pinia": "^2.2.4",
+    "primeicons": "^7.0.0",
     "vue": "^3.5.11",
     "vue-router": "^4.4.5"
   },
